<resources>
    <string name="app_name">Zenno Finanças</string>

    // Tela Inicial
    <string name="tituloInicial">Seu aliado pra fazer o dinheiro durar.</string>
    <string name="btnEntrarInicial">Entrar</string>
    <string name="btnCadastrarInicial">Não tem uma conta? Cadastre-se</string>

    // Tela Login
    <string name="tituloLogin">Bem vindo de volta!</string>
    <string name="subtituloLogin">Faça login com a suas credenciais.</string>
    <string name="lblEmailLogin">E-mail</string>
    <string name="lblSenhaLogin">Senha</string>
    <string name="hintEmailLogin">seuemail@gmail.com</string>
    <string name="hintSenhaLogin">*******</string>
    <string name="lblEsqueceuSenha">Esqueceu a senha?</string>
    <string name="subtituloSemConta">Não possui uma conta? <b>Cadastre-se</b></string>

    // Tela Esqueceu a Senha
    <string name="tituloEsqueceuSenha">Esqueceu a senha?</string>
    <string name="subtituloEsqueceuSenha">Não se preocupe! Acontece. Por favor digite o e-mail associado a sua conta.</string>
    <string name="btnEsqueceuSenha">Enviar código</string>
    <string name="lblLembrarSuaSenha">Lembra sua senha? <b>Entre</b></string>

    // Tela Verificar código e-mail
    <string name="tituloChecarCodigo">Cheque seu e-mail</string>
    <string name="subtituloChecarCodigo"> Nós enviamos um código de recuperação para <b>seuemail@gmail.com</b></string>
    <string name="hintChecarCodigo">Digite o código</string>
    <string name="btnChecarCodigo">Verificar</string>

    // Tela Redefinir senha
    <string name="tituloRedefinirSenha">Redefinir a senha</string>
    <string name="subtituloRedefinirSenha">Por favor escreva algo que você vai se lembrar.</string>
    <string name="lblNovaSenha">Nova senha</string>
    <string name="lblRepitaNovaSenha">Repita a nova senha</string>
    <string name="btnRedefinirSenha">Redefinir senha</string>

    // Tela Senha alterada
    <string name="tituloSenhaAlterada">Senha alterada!</string>
    <string name="subtituloSenhaAlterada">Sua senha foi alterada com sucesso!</string>
    <string name="btnVoltarAoLogin">Voltar ao login</string>

    // Tela Criar Conta
    <string name="tituloCriarConta">Crie sua conta <b>ZENNO!</b></string>
    <string name="btnCriarGoogle">Criar com Google</string>
    <string name="btnCriarEmail">Criar com E-mail</string>
    <string name="subtituloCriarConta">Ja possui uma conta? <b>Entrar</b></string>

    // Tela Criar Conta Email
    <string name="tituloCriarContaEmail">Cadastre-se agora!</string>
    <string name="subtituloCriarContaEmail">Crie uma conta e tenha acesso a todos os recursos do nosso app!</string>
    <string name="lblNomeCompleto">Nome completo (sem abreviações)</string>
    <string name="hintNomeCriarConta">seu nome</string>
    <string name="hintSenhaCriarConta">mínimo de 8 caracteres</string>
    <string name="lblConfirmarSenha">Confirme a senha</string>
    <string name="hintConfSenhaCriarConta">repita a senha</string>
    <string name="btnCriarConta">Cadastrar</string>

    // Tela Meu Perfil
    <string name="lblEditarPerfil">Editar informações do perfil</string>
    <string name="lblNotificacoes">Notificações</string>
    <string name="lblSuporte">Ajuda e suporte</string>
    <string name="lblSobreApp">Sobre o app</string>
    <string name="lblTermosPoliticas">Termos e políticas</string>
    <string name="lblSairConta">Sair da conta</string>

    // Tela Editar Perfil
    <string name="tituloEditPerfil">Editar Perfil</string>
    <string name="lblCelularEditPerfil">Número de celular</string>
    <string name="btnTrocarFoto">Trocar foto</string>
    <string name="btnSalvarAlteracoes">Salvar Alterações</string>

    // Tela Notificações
    <string name="subtituloGeralNotif">Geral</string>
    <string name="swtDesativarNotif">Desativar todas as notificações</string>
    <string name="swtSonsNotif">Sons</string>
    <string name="swtVibraçõesNotif">Vibrações</string>
    <string name="subtituloSistemaNotif">Sistema E atualizações</string>
    <string name="swtVencContaNotif">Vencimento de conta</string>
    <string name="subtituloOutrasNotif">Outras notificações</string>
    <string name="swtNovasFuncNotif">Novas funcionalidades</string>
    <string name="swtMovMoedasNotif">Movimentações das moedas</string>
    <string name="btnSalvarNotif">Salvar</string>

    // Tela Cotação
    <string name="tituloConversor">Faça uma cotação!</string>
    <string name="subtituloConversor">Selecione a moeda desejada para cotação.</string>
    <string name="lblQuantiaConversor">Quantia:</string>
    <string name="lblConverterConversor">Converter para:</string>
    <string name="txtValorCotacao">Valor</string>
    <string name="txtMoedaOrigem">MoedaOrigem</string>
    <string name="txtConverter">Converter</string>
    <string name="lblResultado"> --------  </string>
    <string name="btnConverter">Converter</string>

    // Tela Política de Privacidade
    <string name="tituloPoliticaPrivac">Política de privacidade</string>
    <string name="lblPoliticaPrivac">
    1. Dados Coletados\n
    O Zenno Finanças pode armazenar informações como dados de uso inseridos pelo próprio usuário (ex: nome, metas financeiras, receitas e despesas).\n\n
    2. Uso dos Dados\n
    Todas as informações inseridas têm como objetivo permitir o funcionamento do app e ajudar o usuário a organizar e acompanhar sua vida financeira.\n\n
    3. Armazenamento e Segurança\n
    Os dados ficam salvos apenas no banco de dados do Zenno Finanças, com acesso restrito e protegido. Não utilizamos os dados para fins comerciais, nem os compartilhamos com terceiros.\n\n
    4. Compartilhamento de Informações\n
    O Zenno Finanças não compartilha nenhuma informação pessoal com terceiros, sob nenhuma circunstância.\n\n
    5. Seus Direitos\n
    Você pode solicitar a exclusão definitiva dos seus dados, entrando em contato pelo e-mail: financaszenno@gmail.com.\n
    Caso haja mudanças nesta política, avisaremos os usuários dentro do próprio app.
    </string>
    <string name="btnPoliticaPrivac">Aceitar</string>

    // Tela Sobre o App
    <string name="lblSobreOApp">
    Versão: <b>1.0.0</b> \n
    Última atualização: <b>11/06/2025</b> \n

    \n O <b>Zenno Finanças</b> foi criado para ajudar você a organizar suas finanças pessoais de forma simples, rápida e segura. \n

    \nCom ele, você pode: \n
    • <b>Registrar receitas e despesas;</b> \n
    • <b>Estabelecer metas financeiras;</b> \n
    • <b>Acompanhar sua evolução mensal.</b> \n

    \n Todos os dados inseridos ficam armazenados com <b>segurança</b> no próprio banco de dados do app, <b>sem</b> compartilhamento com terceiros. \n

    \n Desenvolvido por: <b>Lincoln Silva Vieira, Matheus de Lima Ribeiro, Matheus Norberto dos Reis, Pedro Costa Pereira, Vinicius Alves de Souza e Vinicius Csetnek de Araujo.</b>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Tela Tudo pronto
    <string name="tituloTudoPronto">Tudo pronto para usar o Zenno!</string>
    <string name="btnTudoPronto">Ir para tela inicial</string>

    // Tela Home - Inicial
    <string name="tituloHome">Saldo atual em conta</string>
    <string name="subtituloHome1">Receitas</string>
    <string name="subtituloHome2">Despesas</string>
    <string name="subtituloHome3">Suas Receitas</string>
    <string name="subtituloHome4">Contas</string>
    <string name="subtituloHome5">Seus gastos</string>

    // Tela Metas
    <string name="tituloMetas">Metas</string>
    <string name="subtituloMetas">Você ainda não possui metas cadastradas.</string>
    <string name="btnMetas">Cadastrar agora</string>

    // Tela Extrato
    <string name="tituloExtrato">MêsAtual</string>
    <string name="subtituloExtrato">Saldo atual</string>
    <string name="txtExtrato1">Você não possui transações registradas.</string>
    <string name="txtExtrato2">Adicione suas movimentações na home!</string>

    // Detalhes Extrato
    <string name="titulo_detalhes">Detalhes da Transação</string>
    <string name="lbl_descricao">Descrição</string>
    <string name="hint_descricao">Ex: Salário, Mercado...</string>
    <string name="lbl_valor">Valor (R$)</string>
    <string name="lbl_data">Data (DD/MM/AAAA)</string>
    <string name="btn_salvar_alteracoes">Salvar Alterações</string>
    <string name="btn_excluir_transacao">Excluir Transação</string>
    <string name="desc_voltar">Voltar</string>

</resources>