<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_4"
    tools:context=".TelaNotificacoes">

    <Button
        android:id="@+id/btnSalvarNotif"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="33dp"
        android:backgroundTint="#1c9d6a"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/btnSalvarNotif"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tituloNotificacoes"
        android:layout_width="278dp"
        android:layout_height="38dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="61dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/lblNotificacoes"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/swtSonsNotif"
        android:layout_width="311dp"
        android:layout_height="27dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/swtSonsNotif"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtDesativarNotif" />

    <TextView
        android:id="@+id/subtituloGeralNotif"
        android:layout_width="278dp"
        android:layout_height="38dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="83dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/subtituloGeralNotif"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloNotificacoes" />

    <TextView
        android:id="@+id/subtituloSistemaNotif"
        android:layout_width="278dp"
        android:layout_height="38dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="83dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/subtituloSistemaNotif"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtVibraçõesNotif" />

    <Switch
        android:id="@+id/swtVencContaNotif"
        android:layout_width="311dp"
        android:layout_height="27dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/swtVencContaNotif"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtituloSistemaNotif" />

    <Switch
        android:id="@+id/swtDesativarNotif"
        android:layout_width="311dp"
        android:layout_height="27dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="49dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/swtDesativarNotif"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtituloGeralNotif" />

    <Switch
        android:id="@+id/swtVibraçõesNotif"
        android:layout_width="311dp"
        android:layout_height="27dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/swtVibraçõesNotif"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtSonsNotif" />

</androidx.constraintlayout.widget.ConstraintLayout>