<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_3"
    tools:context=".TelaCadastrarEmail">

    <ImageView
        android:id="@+id/imgLogoCadastro"
        android:layout_width="191dp"
        android:layout_height="61dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_3" />

    <TextView
        android:id="@+id/txtEntrarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/subtituloCriarConta"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrar" />

    <TextView
        android:id="@+id/tituloCadastro"
        android:layout_width="278dp"
        android:layout_height="38dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="87dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/tituloCriarContaEmail"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoCadastro" />

    <TextView
        android:id="@+id/subtituloCadastro"
        android:layout_width="319dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="46dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/subtituloCriarContaEmail"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloCadastro" />

    <EditText
        android:id="@+id/txtNomeCadastro"
        android:layout_width="357dp"
        android:layout_height="48dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/backgroud_roxo"
        android:backgroundTint="#2F114B"
        android:ems="10"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/hintNomeCriarConta"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#BFBFBF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNomeCriarConta" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="#1c9d6a"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/btnCriarConta"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfSenhaCadastro" />

    <TextView
        android:id="@+id/lblNomeCriarConta"
        android:layout_width="283dp"
        android:layout_height="27dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/lblNomeCompleto"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtituloCadastro" />

    <TextView
        android:id="@+id/lblSenhaCadastro"
        android:layout_width="283dp"
        android:layout_height="27dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/lblSenhaLogin"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailCadastro" />

    <EditText
        android:id="@+id/txtConfSenhaCadastro"
        android:layout_width="357dp"
        android:layout_height="48dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/backgroud_roxo"
        android:backgroundTint="#2F114B"
        android:ems="10"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/hintConfSenhaCriarConta"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#BFBFBF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblConfSenhaCadastro" />

    <TextView
        android:id="@+id/lblConfSenhaCadastro"
        android:layout_width="283dp"
        android:layout_height="27dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/lblConfirmarSenha"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSenhaCadastro" />

    <EditText
        android:id="@+id/txtEmailCadastro"
        android:layout_width="357dp"
        android:layout_height="48dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/backgroud_roxo"
        android:backgroundTint="#2F114B"
        android:drawableTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/hintEmailLogin"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#BFBFBF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmailCadastro" />

    <TextView
        android:id="@+id/lblEmailCadastro"
        android:layout_width="283dp"
        android:layout_height="27dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/lblEmailLogin"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeCadastro" />

    <EditText
        android:id="@+id/txtSenhaCadastro"
        android:layout_width="357dp"
        android:layout_height="48dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/backgroud_roxo"
        android:backgroundTint="#2F114B"
        android:ems="10"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/hintSenhaLogin"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#BFBFBF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSenhaCadastro" />

</androidx.constraintlayout.widget.ConstraintLayout>