<?xml version="1.0" encoding="utf-8"?>
<!--
    Layout inicial da aplicação.
    Tela composta por logo, título e botões principais.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_1"
    tools:context=".MainActivity">

    <!-- Exibe a logo centralizada no topo -->
    <ImageView
        android:id="@+id/imgLogoInicial"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_1" />

    <!-- Título centralizado abaixo da logo -->
    <TextView
        android:id="@+id/tituloInicial"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:layout_marginBottom="101dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/tituloInicial"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrarInicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Botão de acesso para usuários já cadastrados -->
    <Button
        android:id="@+id/btnEntrarInicial"
        android:layout_width="331dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="#1C9D6A"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/btnEntrarInicial"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarInicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Botão para novos usuários criarem uma conta -->
    <Button
        android:id="@+id/btnCadastrarInicial"
        android:layout_width="331dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="#712AAF"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/btnCadastrarInicial"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
